[gd_scene load_steps=77 format=3 uid="uid://cvjqv326igmk0"]

[ext_resource type="Shader" uid="uid://bjvj06ua8cemq" path="res://shaders/hit-indicator.gdshader" id="1_4eijp"]
[ext_resource type="Script" uid="uid://b28px6v36quwm" path="res://scripts/player.gd" id="1_8i3nd"]
[ext_resource type="Texture2D" uid="uid://s8kxx0tvktsq" path="res://assets/player-idle.png" id="3_tmw0k"]
[ext_resource type="Texture2D" uid="uid://d1xycnd2dtkmv" path="res://assets/player-attack.png" id="3_uo3rx"]
[ext_resource type="Texture2D" uid="uid://c6jyjl5yn1stk" path="res://assets/player-walking.png" id="5_gv2ji"]
[ext_resource type="PackedScene" uid="uid://c44q2u3nky1ek" path="res://scenes/player_ui.tscn" id="5_w4gtq"]
[ext_resource type="Texture2D" uid="uid://crm3gfp6b38rr" path="res://assets/player-jump.png" id="5_yp14q"]
[ext_resource type="Script" uid="uid://c78y4t65s6f4q" path="res://scripts/ghost_inventory.gd" id="6_4ximd"]
[ext_resource type="Texture2D" uid="uid://bbhde8lbjildy" path="res://assets/player-walking-attack.png" id="6_awbyk"]
[ext_resource type="Shader" uid="uid://bs886qv57y5wp" path="res://shaders/shield.gdshader" id="6_lxgy7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26xo2"]
size = Vector2(9, 26)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ennlf"]
shader = ExtResource("1_4eijp")
shader_parameter/value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_10b3u"]
atlas = ExtResource("3_uo3rx")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3wk8"]
atlas = ExtResource("3_uo3rx")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oypwd"]
atlas = ExtResource("3_uo3rx")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_faacw"]
atlas = ExtResource("3_uo3rx")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk6uc"]
atlas = ExtResource("3_uo3rx")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol55j"]
atlas = ExtResource("3_uo3rx")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qcr8"]
atlas = ExtResource("3_uo3rx")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf47j"]
atlas = ExtResource("3_uo3rx")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rias"]
atlas = ExtResource("3_uo3rx")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnhva"]
atlas = ExtResource("3_uo3rx")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqle"]
atlas = ExtResource("3_uo3rx")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n07k"]
atlas = ExtResource("3_tmw0k")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sty3t"]
atlas = ExtResource("3_tmw0k")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j8vn"]
atlas = ExtResource("3_tmw0k")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiat0"]
atlas = ExtResource("3_tmw0k")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehm7x"]
atlas = ExtResource("3_tmw0k")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujbfh"]
atlas = ExtResource("3_tmw0k")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1t2j"]
atlas = ExtResource("3_tmw0k")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbn0r"]
atlas = ExtResource("3_tmw0k")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y03a2"]
atlas = ExtResource("3_tmw0k")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfka1"]
atlas = ExtResource("3_tmw0k")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vweyd"]
atlas = ExtResource("3_tmw0k")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwvs3"]
atlas = ExtResource("5_yp14q")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj0x6"]
atlas = ExtResource("5_yp14q")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nle81"]
atlas = ExtResource("5_yp14q")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwied"]
atlas = ExtResource("5_yp14q")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltfk0"]
atlas = ExtResource("5_yp14q")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbole"]
atlas = ExtResource("5_yp14q")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7013r"]
atlas = ExtResource("5_yp14q")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1odc"]
atlas = ExtResource("5_yp14q")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg017"]
atlas = ExtResource("5_yp14q")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37drp"]
atlas = ExtResource("5_yp14q")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfe2e"]
atlas = ExtResource("5_yp14q")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyfwf"]
atlas = ExtResource("5_gv2ji")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vg8v"]
atlas = ExtResource("5_gv2ji")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyri2"]
atlas = ExtResource("5_gv2ji")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cahkh"]
atlas = ExtResource("5_gv2ji")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8elrp"]
atlas = ExtResource("5_gv2ji")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aslus"]
atlas = ExtResource("5_gv2ji")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg1gj"]
atlas = ExtResource("5_gv2ji")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xgyc"]
atlas = ExtResource("5_gv2ji")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rpdl"]
atlas = ExtResource("5_gv2ji")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqsov"]
atlas = ExtResource("5_gv2ji")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmxet"]
atlas = ExtResource("5_gv2ji")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iusdl"]
atlas = ExtResource("6_awbyk")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_temlf"]
atlas = ExtResource("6_awbyk")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6a"]
atlas = ExtResource("6_awbyk")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e43e"]
atlas = ExtResource("6_awbyk")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj2p7"]
atlas = ExtResource("6_awbyk")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvgcx"]
atlas = ExtResource("6_awbyk")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6bxv"]
atlas = ExtResource("6_awbyk")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqnnf"]
atlas = ExtResource("6_awbyk")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7t7a"]
atlas = ExtResource("6_awbyk")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrw26"]
atlas = ExtResource("6_awbyk")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atrkh"]
atlas = ExtResource("6_awbyk")
region = Rect2(240, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m263x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10b3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3wk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oypwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faacw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk6uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qcr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnhva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqle")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n07k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sty3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j8vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiat0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehm7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujbfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1t2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbn0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y03a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfka1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vweyd")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwvs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj0x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nle81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwied")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltfk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbole")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7013r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1odc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg017")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37drp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfe2e")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyfwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vg8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyri2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cahkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8elrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aslus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg1gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xgyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rpdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqsov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmxet")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iusdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_temlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e43e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj2p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvgcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6bxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqnnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7t7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrw26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atrkh")
}],
"loop": true,
"name": &"walk-attack",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_1qkdn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lpfv2"]
resource_name = "hit"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.6, 2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.6, 0.0, 0.6, 0.0, 0.6, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8mlmo"]
_data = {
&"RESET": SubResource("Animation_1qkdn"),
&"hit": SubResource("Animation_lpfv2")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uct1m"]
noise_type = 3
frequency = 0.008
fractal_octaves = 3
fractal_lacunarity = 2.48
fractal_gain = -0.295
fractal_weighted_strength = 0.1
domain_warp_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eb6d2"]
seamless = true
seamless_blend_skirt = 0.8
noise = SubResource("FastNoiseLite_uct1m")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r2s7t"]
shader = ExtResource("6_lxgy7")
shader_parameter/noise = SubResource("NoiseTexture2D_eb6d2")

[sub_resource type="Gradient" id="Gradient_mfw4p"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pnvrp"]
gradient = SubResource("Gradient_mfw4p")

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 79
script = ExtResource("1_8i3nd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_26xo2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_26xo2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ennlf")
sprite_frames = SubResource("SpriteFrames_m263x")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.425435

[node name="GhostInventory" type="Node2D" parent="."]
script = ExtResource("6_4ximd")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="PlayerUI" parent="Camera2D" instance=ExtResource("5_w4gtq")]

[node name="HitIndicationAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8mlmo")
}
speed_scale = 3.0

[node name="Shield" type="Sprite2D" parent="."]
visible = false
texture_repeat = 3
material = SubResource("ShaderMaterial_r2s7t")
scale = Vector2(0.85, 0.85)
texture = SubResource("GradientTexture2D_pnvrp")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
